test/files/neg/t5390c.scala
class A {
  case class B(s: String)
}

object X {
  def foo {
    val b = new a.B("")
    val a = new A
  }
}